# ToyRenderer

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  clean.sh  format.sh
include/: aabb.h  bvh.h  camera.h  color.h  common.h  hittable.h  hittable_list.h  interval.h  material.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  sphere.h  texture.h  vec3.h
src/: CMakeLists.txt  main.cpp
